src/style/css/base.scss
@charset "UTF-8";
/*
* RESET
 */
h1 {
  font-size: 7.9vw; }

h2 {
  font-size: 3.0vh; }

/*
* GENERAL THEME
*/
html {
  scroll-behavior: smooth; }

:root {
  --primary-background: #1f1f1f;
  --primary-color: white;
  --primary-yellow: #fbd54a; }

body {
  background-color: var(--primary-background);
  color: var(--primary-background) !important;
  overflow-x: hidden; }
  body p, body h1, body h2, body h3, body h4, body h5, body h6, body ul, body li, body blockquote {
    color: var(--primary-color) !important;
    font-family: 'Roboto', sans-serif; }
  body a {
    font-family: 'Roboto', sans-serif;
    color: var(--primary-yellow) !important;
    text-decoration: underline; }

.error {
  color: red !important; }

/*checkbox is not checked*/
[type="checkbox"] + span:not(.lever):before {
  border-color: var(--primary-yellow); }

/*checkbox is checked*/
[type="checkbox"]:checked + span:not(.lever):before {
  border-top: transparent;
  border-left: transparent;
  border-right: 2px solid var(--primary-yellow);
  border-bottom: 2px solid var(--primary-yellow); }

/*
* SCROLLBAR CUSTOM
 */
/* width */
::-webkit-scrollbar {
  width: 5px;
  height: 5px; }

/* Track */
::-webkit-scrollbar-track {
  background: transparent; }

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--primary-yellow);
  border-radius: 5px; }

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgba(243, 156, 18, 0.82); }

.card {
  background-color: var(--primary-color) !important; }
  .card p, .card h1, .card h2, .card h3, .card h4, .card h5, .card h6, .card a, .card ul, .card li, .card blockquote {
    color: var(--primary-background) !important; }

.collapsible-header {
  color: var(--primary-background) !important; }

blockquote {
  border-left-color: var(--primary-yellow) !important; }

input {
  color: var(--primary-color) !important;
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  border-bottom-color: var(--primary-color); }

input[type=text]:not(.browser-default):focus:not([readonly]) {
  border-bottom: 1px solid var(--primary-yellow) !important;
  box-shadow: 0 1px 0 0 var(--primary-yellow) !important; }

.select-wrapper input.select-dropdown:focus {
  border-bottom: 1px solid var(--primary-yellow) !important; }

.select-wrapper svg {
  fill: var(--primary-yellow) !important; }

.select-dropdown li span {
  color: var(--primary-background) !important; }

.select-dropdown li:hover {
  background-color: var(--primary-yellow) !important; }

.api-input {
  margin-top: 25px !important; }
  .api-input label {
    color: var(--primary-color) !important;
    font-family: 'Roboto', sans-serif; }

.helper-text {
  color: red !important; }

.btn {
  background-color: var(--primary-yellow) !important; }

/*
* HEADER
*/
nav {
  background-color: var(--primary-yellow) !important;
  box-shadow: none !important; }

.nav-wrapper a {
  color: var(--primary-background) !important;
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  text-decoration: none !important; }

.nav-wrapper .right li a:hover .rotate {
  animation: rotate 1s infinite linear; }

@keyframes rotate {
  0% {
    transform: rotate(360deg); }
  100% {
    transform: rotate(0deg); } }

.explore:hover i {
  animation: search 2s;
  animation-fill-mode: forwards; }

@keyframes search {
  0% {
    transform: rotate(360deg); }
  50% {
    transform: rotate(230deg); }
  80% {
    transform: rotate(300deg); }
  85% {
    transform: rotate(280deg); }
  90% {
    transform: rotate(300deg); }
  100% {
    transform: rotate(280deg); } }

.brand-logo.large {
  margin-left: 20px; }

@media only screen and (max-width: 992px) {
  nav .brand-logo {
    left: 13% !important;
    transform: translateX(-13%) !important; } }

.brand-logo {
  font-family: 'Lexend Zetta', sans-serif;
  color: var(--primary-background) !important;
  height: inherit;
  top: -5px; }
  .brand-logo .text-brand.small {
    font-size: 100%; }
  .brand-logo .text-brand {
    position: relative; }
    .brand-logo .text-brand span {
      position: absolute;
      top: 7px;
      left: 65px;
      font-size: xx-small; }
  .brand-logo .header {
    margin-left: 15px;
    float: right; }
    .brand-logo .header p {
      margin-top: 0 !important; }

.header p .online {
  font-size: small;
  color: #0f9d58; }
  .header p .online .btn-floating {
    width: 10px;
    height: 10px;
    line-height: 10px;
    margin-bottom: 4px;
    background-color: #0f9d58; }

.header p .offline {
  font-size: small;
  color: #880e4f; }
  .header p .offline .btn-floating {
    width: 10px;
    height: 10px;
    line-height: 10px;
    margin-bottom: 4px;
    background-color: #880e4f; }

.arrow-1 {
  text-align: center;
  color: transparent;
  position: relative; }
  .arrow-1 .a {
    background-color: #333333;
    position: absolute;
    left: 45%;
    height: 56px;
    width: 10px; }

.arrow-2 {
  text-align: center;
  color: transparent;
  position: relative; }
  .arrow-2 .a {
    background-color: #333333;
    position: absolute;
    left: 8% !important;
    height: 144px;
    width: 10px;
    top: -36px;
    transform: rotate(65deg); }
  .arrow-2 .b {
    background-color: #333333;
    position: absolute;
    left: 82% !important;
    height: 144px;
    width: 10px;
    top: -36px;
    transform: rotate(114deg); }

.arrow-3 {
  text-align: center;
  color: transparent;
  position: relative; }
  .arrow-3 .a {
    background-color: #333333;
    position: absolute;
    left: -82% !important;
    height: 550px;
    width: 10px;
    top: -242px;
    transform: rotate(84deg); }
  .arrow-3 .b {
    background-color: #333333;
    position: absolute;
    left: 191% !important;
    height: 550px;
    width: 10px;
    top: -238px;
    transform: rotate(96deg); }
  .arrow-3 .c {
    background-color: #333333;
    position: absolute;
    left: 48%;
    height: 45px;
    width: 10px;
    top: 9px; }

.choice-2, .choice-3, .choice-5 {
  text-align: center;
  color: white;
  position: relative; }
/* ... */

